<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/colorPrimaryLight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/thermometer_image"
        android:maxWidth="225dp"
        android:maxHeight="225dp"
        app:srcCompat="@drawable/thermometer_159652_960_720" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/maintext"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/chirps_hint"
        android:importantForAutofill="no"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radgrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radbtnc"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radbtnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/celsius_c" />

        <RadioButton
            android:id="@+id/radbtnf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_f" />

    </RadioGroup>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/calculate_temperature"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="" />

</androidx.appcompat.widget.LinearLayoutCompat>